# Assignment-Rust-2-nebuliaq-placement-iiitd-hardik-patel-2024

./: README.md  gitignore
rust_log_indexer/: Cargo.toml
rust_log_indexer/src/: client.rs  main.rs
