[package]
name = "rust_log_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
elastic = "7" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "rust_log_indexer"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"