[package]
name = "rust_log_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
elasticsearch = "8.5.0-alpha.1" 
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rust_log_indexer"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"