[package]
name = "rust_log_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

[[bin]]
name = "rust_log_indexer"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"